toolchains/typescript/tests/snapshots/tier1_sync_test__typescript_toolchain_tier1__include_shared_types__can_sync_as_project_ref.snap
---
source: toolchains/typescript/tests/tier1_sync_test.rs
expression: "fs::read_file(sandbox.path().join(\"no-refs/tsconfig.json\")).unwrap()"
---
{
  "include": [
    "../types/**/*"
  ],
  "references": [
    {
      "path": "../types"
    }
  ]
}
